--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^6.8.0",
     "express": "^4.16.3",
     "mysql2": "^1.6.4",
     "sequelize": "^4.41.2"
