--- a/config/config.json
+++ b/config/config.json
@@ -1,25 +1,25 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "blogger",
-    "host": "127.0.0.1",
+    "password": "root",
+    "database": "michelangelo_DB",
+    "host": "localhost",
     "port": 3306,
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "root",
+    "database": "michelangelo_DB",
+    "host": "localhost",
     "port": 3306,
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "database": "michelangelo_DB",
+    "host": "localhost",
     "port": 3306,
     "dialect": "mysql"
   }
