--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
   },
   "production": {
     "username": "root",
-    "password": null,
+    "password": "root",
     "database": "michelangelo_DB",
     "host": "localhost",
     "port": 3306,
