--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.24.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.44.4"
   },
