--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "moment": "^2.24.0",
     "mysql2": "^1.6.4",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.44.4"
   },
   "devDependencies": {},
