--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
+    "password": "Zeph#317",
     "database": "michelangelo_DB",
     "host": "localhost",
     "port": 3306,
