--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.0",
+    "express-session": "^1.17.0",
     "moment": "^2.24.0",
-    "mysql2": "^1.6.4",
+    "mysql2": "^1.6.5",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^4.44.4"
+    "sequelize": "^5.21.5"
   },
   "devDependencies": {},
   "repository": {
